{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 68,
  "lineage": "8c99b6bc-8a13-a89c-a352-dd4017b14bf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Uturn-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0233c2d874b811deb",
            "arn": "arn:aws:ec2:us-east-2:317870743054:instance/i-0bd78bbc523267489",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd78bbc523267489",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-070e4219fa2541b94",
            "private_dns": "ip-10-0-1-20.us-east-2.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-3-22-51-7.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.51.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e5fff2d6f340145",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0784457d6d6416e9e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ddf0fc8a1d32955"
            ]
          },
          "dependencies": [
            "aws_security_group.Uturn-sg",
            "aws_subnet.Uturn-public-1",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Uturn-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0233c2d874b811deb",
            "arn": "arn:aws:ec2:us-east-2:317870743054:instance/i-02cbcd1fd6ed44aa3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cbcd1fd6ed44aa3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3aae20ed2981bed",
            "private_dns": "ip-10-0-2-164.us-east-2.compute.internal",
            "private_ip": "10.0.2.164",
            "public_dns": "ec2-18-224-172-132.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.172.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098775f4ecf2d3bff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e47cc95af31d7397",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ddf0fc8a1d32955"
            ]
          },
          "dependencies": [
            "aws_security_group.Uturn-sg",
            "aws_subnet.Uturn-public-2",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Uturn-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:317870743054:internet-gateway/igw-008959a73f6577278",
            "id": "igw-008959a73f6577278",
            "owner_id": "317870743054",
            "tags": {
              "Name": "Uturn-igw"
            },
            "tags_all": {
              "Name": "Uturn-igw"
            },
            "vpc_id": "vpc-0dc63bfb2958ea0bf"
          },
          "dependencies": [
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Uturn-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:317870743054:loadbalancer/app/Uturn-LB/4fc2fbc79d650ab8",
            "arn_suffix": "app/Uturn-LB/4fc2fbc79d650ab8",
            "dns_name": "Uturn-LB-1551611834.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:317870743054:loadbalancer/app/Uturn-LB/4fc2fbc79d650ab8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Uturn-LB",
            "security_groups": [
              "sg-05ddf0fc8a1d32955"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0784457d6d6416e9e"
              },
              {
                "subnet_id": "subnet-0e47cc95af31d7397"
              }
            ],
            "subnets": [
              "subnet-0784457d6d6416e9e",
              "subnet-0e47cc95af31d7397"
            ],
            "vpc_id": "vpc-0dc63bfb2958ea0bf",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.Uturn-sg",
            "aws_subnet.Uturn-public-1",
            "aws_subnet.Uturn-public-2",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Uturn-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:317870743054:listener/app/Uturn-LB/4fc2fbc79d650ab8/ecd43ce66c593e5f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:317870743054:targetgroup/ALB-TG/e35bf552d1fd5e37",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:317870743054:listener/app/Uturn-LB/4fc2fbc79d650ab8/ecd43ce66c593e5f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:317870743054:loadbalancer/app/Uturn-LB/4fc2fbc79d650ab8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Uturn-elb",
            "aws_lb_target_group.Uturn-tg",
            "aws_security_group.Uturn-sg",
            "aws_subnet.Uturn-public-1",
            "aws_subnet.Uturn-public-2",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Uturn-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:317870743054:targetgroup/ALB-TG/e35bf552d1fd5e37",
            "arn_suffix": "targetgroup/ALB-TG/e35bf552d1fd5e37",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:317870743054:targetgroup/ALB-TG/e35bf552d1fd5e37",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc63bfb2958ea0bf"
          },
          "dependencies": [
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Uturn-tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:317870743054:targetgroup/ALB-TG/e35bf552d1fd5e37-20210721234332430000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:317870743054:targetgroup/ALB-TG/e35bf552d1fd5e37",
            "target_id": "i-0bd78bbc523267489"
          },
          "dependencies": [
            "aws_instance.Uturn-instance-1",
            "aws_lb_target_group.Uturn-tg",
            "aws_security_group.Uturn-sg",
            "aws_subnet.Uturn-public-1",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Uturn-tg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:317870743054:targetgroup/ALB-TG/e35bf552d1fd5e37-20210721234322186200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:317870743054:targetgroup/ALB-TG/e35bf552d1fd5e37",
            "target_id": "i-02cbcd1fd6ed44aa3"
          },
          "dependencies": [
            "aws_instance.Uturn-instance-2",
            "aws_lb_target_group.Uturn-tg",
            "aws_security_group.Uturn-sg",
            "aws_subnet.Uturn-public-2",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Uturn-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:317870743054:route-table/rtb-02f166257b22dcf9c",
            "id": "rtb-02f166257b22dcf9c",
            "owner_id": "317870743054",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008959a73f6577278",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Uturn-rt"
            },
            "tags_all": {
              "Name": "Uturn-rt"
            },
            "vpc_id": "vpc-0dc63bfb2958ea0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Uturn-igw",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Uturn-rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00515737b4ec0c954",
            "route_table_id": "rtb-02f166257b22dcf9c",
            "subnet_id": "subnet-0784457d6d6416e9e"
          },
          "dependencies": [
            "aws_internet_gateway.Uturn-igw",
            "aws_route_table.Uturn-rt",
            "aws_subnet.Uturn-public-1",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Uturn-rta-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71ef6df68162511",
            "route_table_id": "rtb-02f166257b22dcf9c",
            "subnet_id": "subnet-0e47cc95af31d7397"
          },
          "dependencies": [
            "aws_internet_gateway.Uturn-igw",
            "aws_route_table.Uturn-rt",
            "aws_subnet.Uturn-public-2",
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Uturn-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:317870743054:security-group/sg-05ddf0fc8a1d32955",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ddf0fc8a1d32955",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Uturn-sg",
            "name_prefix": "",
            "owner_id": "317870743054",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc63bfb2958ea0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Uturn-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:317870743054:subnet/subnet-0784457d6d6416e9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0784457d6d6416e9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "317870743054",
            "tags": {
              "Name": "Uturn-public-1"
            },
            "tags_all": {
              "Name": "Uturn-public-1"
            },
            "vpc_id": "vpc-0dc63bfb2958ea0bf"
          },
          "dependencies": [
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Uturn-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:317870743054:subnet/subnet-0e47cc95af31d7397",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e47cc95af31d7397",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "317870743054",
            "tags": {
              "Name": "Uturn-public-2"
            },
            "tags_all": {
              "Name": "Uturn-public-2"
            },
            "vpc_id": "vpc-0dc63bfb2958ea0bf"
          },
          "dependencies": [
            "aws_vpc.Uturn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Uturn-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:317870743054:vpc/vpc-0dc63bfb2958ea0bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f38d32f204cc558a",
            "default_route_table_id": "rtb-03a89db6455626edd",
            "default_security_group_id": "sg-0ceef087bec16889b",
            "dhcp_options_id": "dopt-d1e791ba",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dc63bfb2958ea0bf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a89db6455626edd",
            "owner_id": "317870743054",
            "tags": {
              "Name": "Uturn-vpc"
            },
            "tags_all": {
              "Name": "Uturn-vpc"
            }
          }
        }
      ]
    }
  ]
}